--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ wrapt==1.12.1
 https://download.pytorch.org/whl/cpu/torch-1.5.0%2Bcpu-cp38-cp38-linux_x86_64.whl
 https://download.pytorch.org/whl/cpu/torchvision-0.6.0%2Bcpu-cp38-cp38-linux_x86_64.whl
 fastai
+gunicorn==20.0.4
