--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ six==1.15.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.17
 toml==0.10.1
-torch==1.4.0+cpu
+torch==1.4.0
 torchvision==0.5.0
 urllib3==1.25.9
 values==2019.4.13
