--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,36 @@
 alembic==1.4.2
 astroid==2.4.1
 autopep8==1.5.2
-beautifulsoup4==4.9.1
-Bottleneck==1.3.2
-certifi==2020.4.5.1
-chardet==3.0.4
 click==7.1.2
-cycler==0.10.0
 direnv==2020.5.9
 env-file==2020.5.9
-fastai==1.0.61
-fastprogress==0.2.3
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
-future==0.18.2
 greenlet==0.4.15
-gunicorn==20.0.4
-idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
-kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 Mako==1.1.2
 MarkupSafe==1.1.1
-matplotlib==3.2.1
 mccabe==0.6.1
 msgpack==1.0.0
-numexpr==2.7.1
-numpy==1.18.4
-nvidia-ml-py3==7.352.0
-packaging==20.4
-pandas==1.0.3
-Pillow==7.1.2
 psycopg2-binary==2.8.5
 public==2019.4.13
 pycodestyle==2.6.0
 pylint==2.5.2
 pynvim==0.4.1
-pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
-pytz==2020.1
-PyYAML==5.3.1
-requests==2.23.0
-scipy==1.4.1
 six==1.15.0
-soupsieve==2.0.1
 SQLAlchemy==1.3.17
 toml==0.10.1
-torch==1.4.0
-torchvision==0.5.0
-urllib3==1.25.9
 values==2019.4.13
 Werkzeug==1.0.1
 wrapt==1.12.1
+https://download.pytorch.org/whl/cpu/torch-1.5.0%2Bcpu-cp38-cp38-linux_x86_64.whl
+https://download.pytorch.org/whl/cpu/torchvision-0.6.0%2Bcpu-cp38-cp38-linux_x86_64.whl
+fastai
+gunicorn==20.0.4
